# embedded-sdk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  package-lock.json  package.json  partitions.csv  sdkconfig.defaults  sdkconfig.justin  sdkconfig.old  test.js  wip.cpp
.github/workflows/: build.yaml  clang-format-check.yml
components/peer/: CMakeLists.txt
components/wifi/: CMakeLists.txt
components/ws/: CMakeLists.txt  esp32_websocket.cpp  esp32_websocket.hpp  websocket.cpp  websocket.hpp
main/: CMakeLists.txt  main.c  main.cpp  websocket.cpp  wifi.c  wifi.cpp
src/: CMakeLists.txt  idf_component.yml  main.cpp  main.h  media.cpp  ultravox.cpp  webrtc.cpp  websocket.cpp  wifi.cpp
